--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/manel/.netbeans/23/build.properties
+user.properties.file=C:\\Users\\Manel\\AppData\\Roaming\\NetBeans\\22\\build.properties
